tests/diagnostics/generic_fn_infer.kal
# T appears only in the return type and there are no arguments, so it cannot
# be inferred without an expected type.
fn make<T>() -> Option<T> = None;
make();
